<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/book"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/bg"
            android:scaleType="fitXY"
            android:src="@drawable/book"
            app:tint="@color/bg_light"></ImageView>

        <TextView
            android:id="@+id/bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:lineSpacingExtra="7dp"
            android:text="@string/shortbook"
            android:textColor="@color/bg_light"
            android:textSize="48dp"></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/hi"
                android:textColor="@color/blue_text_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/aman"
                android:textColor="@color/blue_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/stoke"
            android:id="@+id/add_vendor"
            android:gravity="center_vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/group_8"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/add_vendor"
                android:textColor="@color/blue_text_color"
                android:textSize="16sp"></TextView>
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_baseline_search_24"
                    app:tint="@color/hint_color"></ImageView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/search_text"
                    android:textSize="14sp"></EditText>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_blue"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/group_17525"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/shortbook"
                    android:textColor="@color/yallow" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/group_17522"></ImageView>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:paddingHorizontal="20dp"
                    android:src="@drawable/microphone"
                    app:tint="@color/blue"></ImageView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/group_17520"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/account"
                    android:textColor="@color/yallow"></TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>